--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cli-quiz",
+  "name": "cli-ipl",
   "version": "1.0.0",
   "description": "\"A quiz cli program\"",
   "type": "module",
@@ -9,6 +9,7 @@
   },
   "author": "\"Shivanshu Koundal\"",
   "license": "ISC",
+  "bin" : "./index.js",
   "dependencies": {
     "commander": "^12.0.0"
   }
